cabal-version:      2.2
name:               simpoole
version:            0.0.0
category:           Data, Resources
synopsis:           Simple pool
description:        Simple pool
author:             Ole Krüger <haskell-simpoole@vprsm.de>
maintainer:         Ole Krüger <haskell-simpoole@vprsm.de>
homepage:           https://github.com/vapourismo/simpoole
license:            BSD-3-Clause
license-file:       LICENSE
extra-source-files: ChangeLog.md
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/vapourismo/simpoole.git

common warnings
  ghc-options: -Wall -Wextra -Wno-name-shadowing

common extensions
  default-extensions: ImportQualifiedPost

library
  import:           warnings, extensions
  default-language: Haskell2010
  ghc-options:      -Wall -Wextra -Wno-name-shadowing -Wredundant-constraints
  build-depends:    base, time, exceptions, concurrency, containers
  hs-source-dirs:   lib
  exposed-modules:  Simpoole

test-suite simpoole-tests
  import:           warnings, extensions
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wextra -Wno-name-shadowing -threaded -with-rtsopts=-N
  build-depends:    base, simpoole, hspec >= 2.7.1
  hs-source-dirs:   test
  main-is:          Main.hs
